--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   a work in progress
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://svbnet.co" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: svbnet
-github_username:  svbnet
+permalink: /posts/:year/:month/:day/:title
 
 # Build settings
 theme: minima
